--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ main:
   - title: "Team"
     url: /team/
   - title: "Research"
-    url: /about/
+    url: /research/
   - title: "Publications"
     url: /about/
   - title: "Teaching"
