--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Research"
     url: /research/
   - title: "Publications"
-    url: /about/
+    url: /publications/
   - title: "Teaching"
     url: /about/
   - title: "Join us"
