--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,6 @@ main:
 #  - title: "Teaching"
 #    url: /about/
   - title: "Join us"
-    url: /about/
+    url: /joinus/
   - title: "Contact"
     url: /contact/
